<resources>
    <string name="app_name">FoodMates</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="send_a_message">Send a Message</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="take_picture">Take Picture</string>
    <string name="post_description">Post Description....</string>
    <string name="submit">Submit</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT</string>
    <string name="contact">+1(501.....)</string>
    <string name="date">01/01/1999</string>

</resources>